--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -31,8 +32,18 @@
   --color-muted: var(--muted);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-secondary: var(--secondary);
+
   --color-primary-foreground: var(--primary-foreground);
+
+  /* BRAND COLORS */
+
   --color-primary: var(--primary);
+  --color-primary-light: var(--primary-light);
+  --color-primary-mid: var(--primary-mid);
+  --color-primary-low: var(--primary-low);
+  --color-primary-dark: var(--primary-dark);
+
+  /* BRAND COLORS ---- */
   --color-popover-foreground: var(--popover-foreground);
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
@@ -51,7 +62,14 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+
+  /* BRAND COLORS */
+--primary: #B7F2A3;
+--primary-light: #85D084;
+--primary-mid: #3B6E76;
+--primary-low: #083342;
+--primary-dark: #091D1E;
+
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -118,5 +136,12 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer components {
+  
+  .bg-gradient {
+    @apply  bg-radial-[at_-90%_10%] from-primary from-0%  to-primary-low to-60%;
   }
 }
