--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html {
+  background-image: radial-gradient(at -90% 10%, var(--primary) 0%, var(--primary-low) 60%);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
 @theme inline {
   --color-background: var(--background);
@@ -74,7 +80,7 @@
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
+  --muted-foreground: oklch(68.295% 0.00008 271.152);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
@@ -142,6 +148,6 @@
 @layer components {
   
   .bg-gradient {
-    @apply  bg-radial-[at_-90%_10%] from-primary from-0%  to-primary-low to-60%;
+    @apply min-h-[30vh] bg-radial-[at_-90%_10%] from-primary from-0%  to-primary-low to-60%;
   }
 }
