--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,9 @@
 
 @custom-variant dark (&:is(.dark *));
 
-html {
-  background-image: radial-gradient(at -90% 10%, var(--primary) 0%, var(--primary-low) 60%);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+/* html {
+  background-color: var(--foreground);
+} */
 
 
 @theme inline {
@@ -149,5 +147,20 @@ html {
   
   .bg-gradient {
     @apply min-h-[30vh] bg-radial-[at_-90%_10%] from-primary from-0%  to-primary-low to-60%;
+  }
+  .subheading {
+    @apply text-lg md:text-xl font-bold uppercase tracking-[10px]; 
+  }
+  .heading {
+    @apply text-2xl md:text-5xl font-bold text-black;
+  }
+  .body {
+    @apply text-sm 
+  }
+  .section-heading {
+    @apply text-lg md:text-2xl font-bold;
+  }
+  .text-stroke {
+    @apply text-7xl text-transparent font-extrabold [-webkit-text-stroke:0.8px_var(--primary-mid)] [-webkit-text-fill-color:transparent]
   }
 }
