--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,15 +146,15 @@
 @layer components {
   
   .bg-gradient {
-    @apply min-h-[30vh] bg-radial-[at_-90%_10%] from-primary from-0%  to-primary-low to-60%;
+    @apply min-h-[20vh] bg-radial-[at_-90%_10%] from-primary from-0%  to-primary-low to-60%;
   }
   .subheading {
     @apply text-lg md:text-xl font-bold uppercase tracking-[10px]; 
   }
   .heading {
-    @apply text-2xl md:text-5xl font-bold text-black;
+    @apply text-2xl leading-15 md:text-5xl font-bold ;
   }
-  .body {
+  .body-font {
     @apply text-sm 
   }
   .section-heading {
